# gendev2

./: .gitignore
lab1/: .gitignore  main.py
lab2/: .gitignore
lab2/example_project/: main.py
lab2/my_counter_lib/: LICENSE  pyproject.toml
lab2/my_counter_lib/src/my_counter_lib/: generators.py  timers.py
