[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_counter_lib"
version = "1.0.0"
requires-python = ">=3.12"
authors = [
    { name = "Vladyslav Opanasenko", email = "vopanas42@gmail.com" }
]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

